# expense_tracker

./: .gitignore  Dockerfile  docker-compose.yml   pyproject.toml  requirements.txt
backend/: __init__.py  app.py  config.py  database.py  managers.py  ocr_processor.py  parsers.py  services.py  validators.py
frontend/: index.html  script.js  styles.css
